workspace-sf/force-app/main/default/objects/Requisicao_de_Pagamento__c/Requisicao_de_Pagamento__c.object-meta.xml
<CustomObject>
    <label>Requisição de Pagamento</label>
    <nameField>
        <displayFormat>RP-{0000}</displayFormat>
        <label>Requisição de Pagamento</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requisições de Pagamento</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>