workspace-sf/force-app/main/default/objects/Requisicao_de_Pagamento__c/fields/Codigo_do_prestador__c.field-meta.xml
<CustomField>
    <fullName>Codigo_do_prestador__c</fullName>
    <label>Código do prestador</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>