workspace-sf/force-app/main/default/objects/Requisicao_de_Pagamento__c/fields/Contas_de_Parceiro__c.field-meta.xml
<CustomField>
    <fullName>Contas_de_Parceiro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contas de Parceiro</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2 AND 3) OR (4)</booleanFilter>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Pessoa jurídica</value>
        </filterItems>
        <filterItems>
            <field>Account.NumeroContratoParceiro__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Operacional de sinistros, Indenização de sinistros, Pagamento de Prestadora</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Despesas com Sinistros Não Tributáveis, Despesas com Sinistros Tributáveis</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Requisições de Pagamento</relationshipLabel>
    <relationshipName>Requisi_es_de_Pagamento</relationshipName>
    <type>Lookup</type>
</CustomField>