workspace-sf/force-app/main/default/objects/Requisicao_de_Pagamento__c/fields/Data_de_Final_de_Periodo__c.field-meta.xml
<CustomField>
    <fullName>Data_de_Final_de_Periodo__c</fullName>
    <label>Data de Final de Período</label>
    <type>Date</type>
</CustomField>