workspace-sf/force-app/main/default/objects/Requisicao_de_Pagamento__c/fields/data_de_pagamento__c.field-meta.xml
<CustomField>
    <fullName>data_de_pagamento__c</fullName>
    <label>Data de Pagamento</label>
    <type>Date</type>
</CustomField>