workspace-sf/force-app/main/default/objects/Requisicao_de_Pagamento__c/fields/Data_Programada_de_Pagamento__c.field-meta.xml
<CustomField>
    <fullName>Data_Programada_de_Pagamento__c</fullName>
    <label>Data Programada de Pagamento</label>
    <type>Date</type>
</CustomField>