workspace-sf/force-app/main/default/objects/Requisicao_de_Pagamento__c/fields/Fatura__c.field-meta.xml
<CustomField>
    <fullName>Fatura__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fatura</label>
    <referenceTo>Fatura__c</referenceTo>
    <relationshipLabel>Requisições de Pagamento</relationshipLabel>
    <relationshipName>Requisi_es_de_Pagamento</relationshipName>
    <type>Lookup</type>
</CustomField>