workspace-sf/force-app/main/default/objects/Requisicao_de_Pagamento__c/fields/Motivo_Cancelamento__c.field-meta.xml
<CustomField>
    <fullName>Motivo_Cancelamento__c</fullName>
    <label>Motivo Cancelamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>