workspace-sf/force-app/main/default/objects/Requisicao_de_Pagamento__c/fields/Nota_fiscal__c.field-meta.xml
<CustomField>
    <fullName>Nota_fiscal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nota fiscal</label>
    <referenceTo>NotaFiscal__c</referenceTo>
    <relationshipLabel>Requisições de Pagamento</relationshipLabel>
    <relationshipName>Requisi_es_de_Pagamento</relationshipName>
    <type>Lookup</type>
</CustomField>