workspace-sf/force-app/main/default/objects/Requisicao_de_Pagamento__c/fields/Numero_do_Sinistro__c.field-meta.xml
<CustomField>
    <fullName>Numero_do_Sinistro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Número do Sinistro / Benefício ou Número</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Case.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sinistro</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Requisições de Pagamento</relationshipLabel>
    <relationshipName>Requisioes_de_Pagamento</relationshipName>
    <type>Lookup</type>
</CustomField>