workspace-sf/force-app/main/default/objects/Requisicao_de_Pagamento__c/fields/Numero_OP_SAP__c.field-meta.xml
<CustomField>
    <fullName>Numero_OP_SAP__c</fullName>
    <externalId>true</externalId>
    <label>Número OP SAP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>