workspace-sf/force-app/main/default/objects/Requisicao_de_Pagamento__c/fields/Quantidade_total_de_sinistros_realizados__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_total_de_sinistros_realizados__c</fullName>
    <label>Quantidade total de sinistros realizados</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>