workspace-sf/force-app/main/default/objects/Requisicao_de_Pagamento__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pendente</fullName>
            </value>
            <value>
                <fullName>Enviar p/ Financeiro</fullName>
            </value>
            <value>
                <fullName>Enviado p/ Financeiro</fullName>
            </value>
            <value>
                <fullName>Em aprovação</fullName>
            </value>
            <value>
                <fullName>Aprovada</fullName>
            </value>
            <value>
                <fullName>Enviar p/ Tesouraria</fullName>
            </value>
            <value>
                <fullName>Enviado p/ Tesouraria</fullName>
            </value>
            <value>
                <fullName>OP Em criação</fullName>
            </value>
            <value>
                <fullName>OP criada</fullName>
            </value>
            <value>
                <fullName>Rejeitada</fullName>
            </value>
            <value>
                <fullName>Pago</fullName>
            </value>
            <value>
                <fullName>Erro</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>Em Pagamento</fullName>
            </value>
            <value>
                <fullName>Enviar para Registro Financeiro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>