workspace-sf/force-app/main/default/objects/Requisicao_de_Pagamento__c/fields/Tipo_Cotacao__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Cotacao__c</fullName>
    <label>Tipo Cotação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cotação manual</fullName>
            </value>
            <value>
                <fullName>Cotação automática</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>