workspace-sf/force-app/main/default/objects/Requisicao_de_Pagamento__c/fields/Tipo_de_pagamento__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_pagamento__c</fullName>
    <label>Tipo de pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pagamento Segurado (OP não tributável)</fullName>
            </value>
            <value>
                <fullName>Pagamento Beneficiário (OP não tributável)</fullName>
            </value>
            <value>
                <fullName>Pagamento ao Procurador (OP não tributável)</fullName>
            </value>
            <value>
                <fullName>Pagamento a Juízo (OP não tributável)</fullName>
            </value>
            <value>
                <fullName>Pagamento ao Estipulante (OP não tributável)</fullName>
            </value>
            <value>
                <fullName>Acerto de Pagamento de Fatura (OP não tributável)</fullName>
            </value>
            <value>
                <fullName>Reembolso de Despesas com Investigação (OP não tributável)</fullName>
            </value>
            <value>
                <fullName>Reembolso de Despesas com KM Rodados (OP não tributável)</fullName>
            </value>
            <value>
                <fullName>Pagamento Vítima (OP não tributável)</fullName>
            </value>
            <value>
                <fullName>Honorários de Investigação (OP Tributável)</fullName>
            </value>
            <value>
                <fullName>Honorários com Perícia Médica (OP Tributável)</fullName>
            </value>
            <value>
                <fullName>Honorários com Perito (OP Tributável)</fullName>
            </value>
            <value>
                <fullName>Honorários Advocatícios (OP Tributável)</fullName>
            </value>
            <value>
                <fullName>Despesas com Honorários Médicos (OP não tributável)</fullName>
            </value>
            <value>
                <fullName>Reembolso Despesas com Advogados (OP não tributável)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>