workspace-sf/force-app/main/default/objects/Requisicao_de_Pagamento__c/fields/Tipo_Indeniza_o_de_Sinistros__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Indeniza_o_de_Sinistros__c</fullName>
    <label>Tipo Indenização de Sinistros</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendente</fullName>
            </value>
            <value>
                <fullName>Enviar p/ Financeiro</fullName>
            </value>
            <value>
                <fullName>OP Em criação</fullName>
            </value>
            <value>
                <fullName>OP criada</fullName>
            </value>
            <value>
                <fullName>Em aprovação</fullName>
            </value>
            <value>
                <fullName>Aprovada</fullName>
            </value>
            <value>
                <fullName>Rejeitada</fullName>
            </value>
            <value>
                <fullName>Pago</fullName>
            </value>
            <value>
                <fullName>Erro</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>