workspace-sf/force-app/main/default/objects/Requisicao_de_Pagamento__c/fields/Tipo_moeda__c.field-meta.xml
<CustomField>
    <fullName>Tipo_moeda__c</fullName>
    <label>Tipo moeda</label>
    <length>255</length>
    <type>Text</type>
</CustomField>