workspace-sf/force-app/main/default/objects/Requisicao_de_Pagamento__c/fields/Valor_da_Cotacao_de_Moeda_Estrangeira__c.field-meta.xml
<CustomField>
    <fullName>Valor_da_Cotacao_de_Moeda_Estrangeira__c</fullName>
    <label>Valor da Cotação de Moeda Estrangeira</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>