workspace-sf/force-app/main/default/objects/Requisicao_de_Pagamento__c/fields/Valor_do_pagamento__c.field-meta.xml
<CustomField>
    <fullName>Valor_do_pagamento__c</fullName>
    <label>Valor do pagamento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>