workspace-sf/force-app/main/default/objects/Requisicao_de_Pagamento__c/fields/Valor_Total_Prestadora__c.field-meta.xml
<CustomField>
    <fullName>Valor_Total_Prestadora__c</fullName>
    <label>Valor Total Prestadora</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>