workspace-sf/force-app/main/default/objects/Requisicao_de_Pagamento__c/recordTypes/Despesas_com_Sinistros_Tributaveis.recordType-meta.xml
<RecordType>
    <fullName>Despesas_com_Sinistros_Tributaveis</fullName>
    <active>true</active>
    <label>Despesas com Sinistros Tributáveis</label>
</RecordType>