workspace-sf/force-app/main/default/objects/Requisicao_de_Pagamento__c/recordTypes/Indenizacao_de_sinistros.recordType-meta.xml
<RecordType>
    <fullName>Indenizacao_de_sinistros</fullName>
    <active>true</active>
    <label>Indenização de sinistros</label>
</RecordType>