workspace-sf/force-app/main/default/objects/Requisicao_de_Pagamento__c/recordTypes/Operacional_de_sinistros.recordType-meta.xml
<RecordType>
    <fullName>Operacional_de_sinistros</fullName>
    <active>true</active>
    <label>Operacional de sinistros</label>
</RecordType>