workspace-sf/force-app/main/default/objects/Requisicao_de_Pagamento__c/recordTypes/Pagamento_de_Prestadora.recordType-meta.xml
<RecordType>
    <fullName>Pagamento_de_Prestadora</fullName>
    <active>true</active>
    <label>Pagamento de Prestadora</label>
</RecordType>