workspace-sf/force-app/main/default/objects/Requisicao_de_Pagamento__c/validationRules/valida_data_programada_pagamento.validationRule-meta.xml
<ValidationRule>
    <fullName>valida_data_programada_pagamento</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.Name = &apos;Pagamento de Prestadora&apos;, 
				ISPICKVAL(Status__c, &apos;Enviar p/ Financeiro&apos;),
				OR(ISBLANK(Data_Programada_de_Pagamento__c),
				NOT(Data_Programada_de_Pagamento__c &gt;= TODAY() + 2)))</errorConditionFormula>
    <errorMessage>A data programada deve ser maior ou igual à dois dias da data atual.</errorMessage>
</ValidationRule>