workspace-sf/force-app/main/default/objects/Requisicao_de_Pagamento__c/validationRules/valida_fatura.validationRule-meta.xml
<ValidationRule>
    <fullName>valida_fatura</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &apos;Enviar para Registro Financeiro&apos;),  
				ISBLANK(Fatura__c))</errorConditionFormula>
    <errorMessage>Obrigatório inserir uma Fatura.</errorMessage>
</ValidationRule>