workspace-sf/force-app/main/default/objects/Requisicao_de_Pagamento__c/validationRules/valida_fatura_operacional.validationRule-meta.xml
<ValidationRule>
    <fullName>valida_fatura_operacional</fullName>
    <active>false</active>
    <description>caso o tipo de requisição seja igual a operacional o campo fatura deve ser vazio.</description>
    <errorConditionFormula>AND(RecordType.Name = &apos;Operacional de sinistros&apos; ,	NOT	ISBLANK(Fatura__c))</errorConditionFormula>
    <errorMessage>Favor remover a Fatura. Para o tipo de registro Operacional Fatura não deve ser informada.</errorMessage>
</ValidationRule>