workspace-sf/force-app/main/default/objects/Requisicao_de_Pagamento__c/validationRules/valida_nota_fiscal.validationRule-meta.xml
<ValidationRule>
    <fullName>valida_nota_fiscal</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName != &apos;Despesas_com_Sinistros_Nao_Tributaveis&apos;, ISPICKVAL(Status__c, &apos;Enviar p/ Financeiro&apos;),  
				ISBLANK(Nota_fiscal__c))</errorConditionFormula>
    <errorMessage>Obrigatório inserir uma Nota Fiscal</errorMessage>
</ValidationRule>