workspace-sf/force-app/main/default/objects/Requisicao_de_Pagamento__c/validationRules/valida_nota_fiscal_indenizacao.validationRule-meta.xml
<ValidationRule>
    <fullName>valida_nota_fiscal_indenizacao</fullName>
    <active>false</active>
    <description>caso o tipo de requisição seja igual a indenização o campo Nota Fiscal deve ser vazio.</description>
    <errorConditionFormula>AND(RecordType.Name = &apos;Indenização de sinistros&apos; ,	NOT	ISBLANK(Nota_fiscal__c))</errorConditionFormula>
    <errorMessage>Favor remover a Nota Fiscal. Para o tipo de registro Indenização Nota Fiscal não deve ser informada.</errorMessage>
</ValidationRule>