workspace-sf/force-app/main/default/objects/Requisicao_de_Pagamento__c/validationRules/valida_status_cancelado.validationRule-meta.xml
<ValidationRule>
    <fullName>valida_status_cancelado</fullName>
    <active>true</active>
    <description>Ao alterar o status para cancelado é obrigatório inserir um motivo</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &apos;Cancelado&apos;),  
				ISBLANK(Motivo_Cancelamento__c))</errorConditionFormula>
    <errorDisplayField>Motivo_Cancelamento__c</errorDisplayField>
    <errorMessage>Favor preencher o motivo do cancelamento</errorMessage>
</ValidationRule>