workspace-sf/force-app/main/default/objects/Requisicao_de_Pagamento__c/validationRules/Valida_Status_Cancelar_Pagamento_Prestad.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_Status_Cancelar_Pagamento_Prestad</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.Name = &apos;Pagamento de Prestadora&apos;,
ISPICKVAL(Status__c, &apos;Cancelado&apos;),
NOT(ISPICKVAL(PRIORVALUE(Status__c), &apos;Pendente&apos;)), 
				NOT(ISPICKVAL(PRIORVALUE(Status__c), &apos;Enviado p/ Financeiro&apos;)))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Operação não permitida</errorMessage>
</ValidationRule>