workspace-sf/force-app/main/default/objects/Requisicao_de_Pagamento__c/validationRules/valida_status_registro_financeiro.validationRule-meta.xml
<ValidationRule>
    <fullName>valida_status_registro_financeiro</fullName>
    <active>true</active>
    <description>Ao alterar o status para Enviar para Registro Financeiro e verifica se o valor tipo moeda é estrangeira</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &apos;Enviar para Registro Financeiro&apos;),
				ISBLANK(Valor_da_Cotacao_de_Moeda_Estrangeira__c),
				Tipo_moeda__c &lt;&gt; &apos;BRL&apos;)</errorConditionFormula>
    <errorMessage>Favor preencher o campo Valor da Cotação de Moeda Estrangeira</errorMessage>
</ValidationRule>