workspace-sf/force-app/main/default/objects/Requisicao_de_Pagamento__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contas_de_Parceiro__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Nota_fiscal__c</columns>
    <columns>Numero_OP_SAP__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>